--- a/index.html
+++ b/index.html
@@ -387,6 +387,19 @@
             </li>
           </ul>
         </div>
+        <div class="send-block">
+          <h2 class="send-title">Підпишіться на розсилку</h2>
+          <form action="">
+            <label for="">
+              <input type="email" name="user-mail" id="" placeholder="E-mail">
+            </label>
+            <button type="submit">Підписатися
+              <svg class="contacts icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
