--- a/index.html
+++ b/index.html
@@ -52,8 +52,28 @@
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
         </div>
-        <div class="backdrop is-hidden" data-modal>
+        <div class="backdrop is-hidden" data-modal>          
           <div class="modal">
+            <p class="form-text">Залиште свої дані, ми вам передзвонимо</p>
+            <form action="" class="form">
+              <div class="form-field">
+                <label for="name" class="form-label">Ім'я</label>
+                <input type="text" class="form-input" name="name" id="name" autofocus>
+              </div>
+              <div class="form-field">
+                <label for="name" class="form-label">Телефон</label>
+                <input type="text" class="form-input" name="name" id="name">
+              </div>
+              <div class="form-field">
+                <label for="email" class="form-label">Пошта</label>
+                  <input type="email" class="form-input" name="email" id="email">                
+              </div>
+              <div class="form-field">
+                <label for="name" class="form-label">Коментар</label>
+                  <textarea name="comment" id="comment" rows="6" placeholder="Введіть текст"></textarea>                
+              </div>
+            </form>
+            <button type="submit">Відправити</button>
             <button data-modal-close>&#215</button>
           </div>
         </div>
@@ -357,28 +377,28 @@
         <div class="social-block">
           <h2 class="social-title">приєднуйтесь</h2>
           <ul class="icons list">
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
