--- a/index.html
+++ b/index.html
@@ -52,29 +52,48 @@
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
         </div>
-        <div class="backdrop is-hidden" data-modal>          
+        <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <p class="form-text">Залиште свої дані, ми вам передзвонимо</p>
             <form action="" class="form">
               <div class="form-field">
                 <label for="name" class="form-label">Ім'я</label>
-                <input type="text" class="form-input" name="name" id="name" autofocus>
+                <input type="text" class="form-input" name="name" id="name" autofocus />
+                <span class="modal-icon">
+                  <svg class="" width="18" height="18">
+                    <use href="./images/sprite.svg#icon-person-18dp"></use>
+                  </svg>
+                </span>
               </div>
               <div class="form-field">
-                <label for="name" class="form-label">Телефон</label>
-                <input type="text" class="form-input" name="name" id="name">
+                <label for="tel" class="form-label">Телефон</label>
+                <input type="tel" class="form-input" name="tel" id="tel" /><span class="modal-icon">
+                  <svg class="" width="18" height="18">
+                    <use href="./images/sprite.svg#icon-phone-18dp"></use>
+                  </svg>
+                </span>
               </div>
               <div class="form-field">
                 <label for="email" class="form-label">Пошта</label>
-                  <input type="email" class="form-input" name="email" id="email">                
+                <input type="email" class="form-input" name="email" id="email" />
+                <span class="modal-icon">
+                  <svg class="" width="18" height="18">
+                    <use href="./images/sprite.svg#icon-email-18dp"></use>
+                  </svg>
+                </span>
               </div>
               <div class="form-field">
-                <label for="name" class="form-label">Коментар</label>
-                  <textarea name="comment" id="comment" rows="6" placeholder="Введіть текст"></textarea>                
+                <label for="comment" class="form-label">Коментар</label>
+                <textarea name="comment" id="comment" rows="6" placeholder="Введіть текст"></textarea>
               </div>
+              <label> <input type="checkbox" name="agree-check" />Погоджуюся з розсилкою та приймаю <a class="agree link" href="">Умови договору</a> </label>
             </form>
-            <button type="submit">Відправити</button>
-            <button data-modal-close>&#215</button>
+            <button type="submit" class="submit-btn">Відправити</button>
+            <button data-modal-close>
+              <svg class="icon-close" width="18" height="18">
+                <use href="./images/sprite.svg#icon-close-18dp"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
@@ -358,7 +377,7 @@
     </main>
     <footer>
       <div class="footer container">
-        <div>
+        <div class="footer-contacts">
           <a class="logo white" href="./index.html" title="Web Studio"><span>Web</span>Studio</a>
           <address>
             <ul class="address list">
@@ -409,12 +428,13 @@
         </div>
         <div class="send-block">
           <h2 class="send-title">Підпишіться на розсилку</h2>
-          <form action="">
-            <label for="">
-              <input type="email" name="user-mail" id="" placeholder="E-mail">
+          <form>
+            <label>
+              <input type="email" class="send-input" name="email" placeholder="E-mail" />
             </label>
-            <button type="submit">Підписатися
-              <svg class="contacts icon" width="24" height="24">
+            <button type="submit">
+              Підписатися
+              <svg class="icon-send" width="24" height="24">
                 <use href="./images/sprite.svg#icon-send"></use>
               </svg>
             </button>
