--- a/portfolio.html
+++ b/portfolio.html
@@ -223,7 +223,7 @@
     </main>
     <footer>
       <div class="footer container">
-        <div>
+        <div class="footer-contacts">
           <a class="logo white" href="./index.html" title="Web Studio"><span>Web</span>Studio</a>
           <address>
             <ul class="address list">
@@ -242,28 +242,28 @@
         <div class="social-block">
           <h2 class="social-title">приєднуйтесь</h2>
           <ul class="icons list">
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon item">
+            <li class="icon-item">
               <a class="social link" href="">
                 <svg class="center" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -271,6 +271,20 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="send-block">
+          <h2 class="send-title">Підпишіться на розсилку</h2>
+          <form>
+            <label>
+              <input type="email" class="send-input" name="email" placeholder="E-mail" />
+            </label>
+            <button type="submit">
+              Підписатися
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
