--- a/index.html
+++ b/index.html
@@ -404,33 +404,34 @@
         <form class="form">
           <div class="form-field">
             <label for="name" class="form-label">Ім'я</label>
-            <input type="text" class="form-input" name="name" id="name" autofocus />
-            <span class="modal-icon">
-              <svg class="" width="18" height="18">
+            <div class="form-icon">
+              <input type="text" class="form-input" name="name" id="name" autofocus />
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-person-18dp"></use>
               </svg>
-            </span>
+            </div>
           </div>
           <div class="form-field">
             <label for="tel" class="form-label">Телефон</label>
-            <input type="tel" class="form-input" name="tel" id="tel" /><span class="modal-icon">
-              <svg class="" width="18" height="18">
+            <div class="form-icon">
+              <input type="tel" class="form-input" name="tel" id="tel" />
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-phone-18dp"></use>
               </svg>
-            </span>
+            </div>
           </div>
           <div class="form-field">
             <label for="email" class="form-label">Пошта</label>
-            <input type="email" class="form-input" name="email" id="email" />
-            <span class="modal-icon">
-              <svg class="" width="18" height="18">
+            <div class="form-icon">
+              <input type="email" class="form-input" name="email" id="email" />
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-email-18dp"></use>
               </svg>
-            </span>
+            </div>
           </div>
           <div class="form-field">
             <label for="comment" class="form-label">Коментар</label>
-            <textarea name="comment" id="comment" rows="6" placeholder="Введіть текст"></textarea>
+            <textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
           </div>
           <div class="form-checkbox">
             <label class="check-label">
